changement du login et log up et assi leger verification de la taille du text

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
                         
                         <div class="header_menu">
                             <button class="header_button"><a href="#Accueil">Accueil</a></button>
-                            <button class="header_button"><a href="#Annonce">Annonce</a></button>
+                            <!-- <button class="header_button"><a href="#Annonce">Annonce</a></button> -->
                             <button class="header_button"><a href="#contact">Team</a></button>
                             <button class="header_button" id="contact"><a href="#contact">Contact</a></button>
                         </div>
                         <div class="header_auth">
-                            <button class="header_button" ><a href="login/login.html">log in</a></button> 
-                            <button class="header_button">log up</button>
+                            <button class="header_button" ><a href="login/login.html"> Se connecter</a></button> 
+                            <button class="header_button">S'inscrire</button>
                         </div>       
                 </nav>
             </header>
