creation de la page d'inscription

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         </div>
                         <div class="header_auth">
                             <button class="header_button" ><a href="login/login.html"> Se connecter</a></button> 
-                            <button class="header_button">S'inscrire</button>
+                            <button class="header_button"><a href="login/register.html">S'inscrire</a> </button>
                         </div>       
                 </nav>
             </header>
