--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
             </header>
             
         <div class="lucielle">
-
+            <div>
                  <p class="text1"> 
                     "Bienvenue sur notre blog ! Ici, nous croyons en la puissance de vos rêves et en la force 
                     de votre détermination. Ensemble, explorons les chemins de la motivation et de
                     l'entrepreneuriat pour transformer vos ambitions en réussites."
                  </p>
+            </div>
+            
             <div class="img1"></div>
 
         </div>
