--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" >
-    <link rel="icon" href="icone.jpg" type="icone/jpg">
+    <link rel="icon" href="icone.svg" type="icone/svg">
     <title>Freshteam</title>
 </head>
 <body>
